SBVTestSuite/TestSuite/THTests/Files/SCase13.stderr
SCase13.hs:9:14: error: [GHC-39584]
    " SCase13.hs:12:30: Parse error in pattern: Var{}

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero          -> 0
               Num i         -> i
               Var {} _      -> ite (s .== "a") 1 2
               Add a b       -> t e + t b
               Let _   _a  b -> t b
      |]
  |
9 | t e = [sCase|Expr e of
  |              ^^^^^^^^^...

